--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,13 @@
     text-transform: uppercase;
 }
 
+.container {
+    width: 100%;
+}
+
 .background {
-    background-color: #f3f3f3;
+    width:100%;
+    background-color: lightgray;
     
 }
 
